--- a/README
+++ b/README
@@ -5,7 +5,10 @@ You can find the justification for the system and program settings and manual do
 The program fist need, for to work, you install the plugin pyUPVBib containing Python libraries necessary.
 The system includes:
 
-    SQL code for creating database in PostgreSQL + PostGIS in the system of coordinates required.
+    SQL code for creating database in PostgreSQL + PostGIS in the system of coordinates required. 
+        TopoDelProp plugin does not work with a database. Create a database with this code is a very complicate proces. 
+        I am working to improve this. I can create your database and send you a database backup, 
+        ready for restore in PostGis. If you are interested in this please contact me (gaspar.mora.navarro@gmail.com)
     Program for user management
     Documented library of general interest to facilitate work with PostGIS programming in Python
     TopoDelProp Plugin that allows viewing and editing data from the database.
@@ -22,4 +25,62 @@ The database has some automatic procedures that prevent entering geometries are 
 
 The system requires topographic and legal documents justifying the geometry of a working definition of a farm, as topographical memory, ID cards, or acts of demarcation between adjacent neighbors.
 
-Press the help button plugin for more help.
+For a detailed explanation visit
+	http://riunet.upv.es/handle/10251/321/browse?authority=27239&type=author
+
+The sistem uses: 
+	* Qgis 2.x. Will not work in Qgis 3.x
+	* PostgreSQL and PostGIS
+	* Python 2.7
+
+Link to videos that describe the TopoDelProp tool:
+
+Videos in a poor English:
+en_1_geographic_metadata_problem_description
+https://media.upv.es/player/?id=78b13f40-df4c-11e7-8db7-6f5581cc323c
+
+en_2_topodelprop_system_description
+https://media.upv.es/player/?id=8dce1010-df4c-11e7-8db7-6f5581cc323c
+
+en_3_topodelprop_query_data
+https://media.upv.es/player/?id=162cd710-df4e-11e7-8db7-6f5581cc323c
+
+en_4_introduce_data
+https://media.upv.es/player/?id=a1820210-df4c-11e7-8db7-6f5581cc323c
+
+en_5_detailed_data_introduction_1
+https://media.upv.es/player/?id=636b47f0-e183-11e7-8ad7-3f920f6a7e6f
+
+en_5_detailed_data_introduction_2
+https://media.upv.es/player/?id=ca1e1030-e184-11e7-8ad7-3f920f6a7e6f
+
+Videos in Spanish:
+es_1_descripcion_problema_metadatos
+https://media.upv.es/player/?id=c3e1e780-df4c-11e7-8db7-6f5581cc323c
+
+es_2_descripcion_sistema_todelprop
+https://media.upv.es/player/?id=d90b6280-df4c-11e7-8db7-6f5581cc323c
+
+es_3_consulta_con_topodelprop
+https://media.upv.es/player/?id=eca87120-df4c-11e7-8db7-6f5581cc323c
+
+es_4_introducir_datos
+https://media.upv.es/player/?id=fb52ddf0-df4c-11e7-8db7-6f5581cc323c
+
+es_5_introducir_datos_detallado_1
+https://media.upv.es/player/?id=00dd0270-e18a-11e7-8ad7-3f920f6a7e6f
+
+es_5_introducir_datos_detallado_2
+https://media.upv.es/player/?id=bc4ce830-e18b-11e7-8ad7-3f920f6a7e6f
+
+es_6_explicacion_topologia
+https://media.upv.es/player/?id=04e84a20-e18d-11e7-8ad7-3f920f6a7e6f
+
+es_7_geoportal_geodelprop
+https://media.upv.es/player/?id=0f8c53a0-df4d-11e7-8db7-6f5581cc323c
+
+https://media.upv.es/player/?id=636b47f0-e183-11e7-8ad7-3f920f6a7e6f
+
+en_5_detailed_data_introduction_2
+https://media.upv.es/player/?id=ca1e1030-e184-11e7-8ad7-3f920f6a7e6f
+
